more config.yaml cleaning up

--- a/demo.yaml
+++ b/demo.yaml
@@ -17,7 +17,7 @@ components:
       name: demo
       type: table
   invocation-type: async
-  name: demo-latyers-update
+  name: demo-layers-update
   type: action
 - events:
   - name: layers-create
