added table streaming size/timeout default args

--- a/demo.yaml
+++ b/demo.yaml
@@ -84,10 +84,7 @@ components:
   - name: some-attribute
     type: S
   name: demo
-  streaming:
-    debug: true
-    size: small
-    timeout: short
+  streaming: {}
   type: table
 - name: demo
   type: userpool
