--- a/demo.yaml
+++ b/demo.yaml
@@ -20,7 +20,6 @@ components:
     source:
       name: demo
       type: bucket
-  invocation-type: async
   name: demo-bucket-streaming
   permissions:
   - s3:GetObject
@@ -37,13 +36,11 @@ components:
     source:
       name: demo
       type: table
-  invocation-type: async
   name: demo-table-streaming2
   permissions:
   - dynamodb:GetItem
   type: action
-- invocation-type: async
-  name: demo-topic-target
+- name: demo-topic-target
   type: action
 - invocation-type: sync
   name: demo-timer-target
@@ -102,10 +99,10 @@ components:
   name: demo
   type: timer
 parameters:
+  memory-size-default: 512
   memory-size-large: 2048
   memory-size-medium: 1024
-  memory-size-default: 512
   runtime-version: '3.8'
+  timeout-default: 5
   timeout-long: 30
   timeout-medium: 15
-  timeout-default: 5
