--- a/demo.yaml
+++ b/demo.yaml
@@ -2,13 +2,11 @@ components:
 - env:
     variables:
     - foo_bar
-  invocation-type: apigw
   name: demo-api-get
   permissions:
   - dynamodb:Query
   type: action
-- invocation-type: apigw
-  name: demo-api-post
+- name: demo-api-post
   type: action
 - events:
   - name: bucket-streaming
@@ -41,8 +39,7 @@ components:
   type: action
 - name: demo-topic-target
   type: action
-- invocation-type: queue
-  name: demo-timer-target
+- name: demo-timer-target
   type: action
 - auth-type: open
   endpoints:
