--- a/pareto2/api/schemas/worker.yaml
+++ b/pareto2/api/schemas/worker.yaml
@@ -5,10 +5,27 @@ properties:
   event:
     type: object
     properties:
-      schedule:
-        type: string
+      pattern:
+        type: object
+	properties:
+          detail:
+	    type: object
+	required:
+        - detail
+	additionalProperties: true
     required:
-    - schedule
+    - pattern
+    additionalProperties: false
+  alarm:
+    type: object
+    properties:
+      period:
+        type: integer
+      threshold:
+        type: integer
+    required:
+    - period
+    - threshold
     additionalProperties: false
   permissions: 
     type: array
