--- a/pareto2/api/schemas/endpoint.yaml
+++ b/pareto2/api/schemas/endpoint.yaml
@@ -2,14 +2,22 @@
 "$schema": "http://json-schema.org/draft-07/schema#"
 type: object
 properties:
-  event:
-    type: object
-    properties:
-      schedule:
-        type: string
-    required:
-    - schedule
-    additionalProperties: false
+  method: 
+    type: string
+    enum:
+    - GET
+    - POST
+  path:
+    type: string
+  auth:
+    type: string
+    enum
+    - public
+    - private
+  parameters: 
+    type: array
+    items:
+      type: string
   permissions: 
     type: array
     items:
@@ -20,12 +28,15 @@ properties:
       type: string
   size: 
     type: integer
-    minimum: 0
+    minumum: 0
   timeout: 
     type: integer
     minimum: 0
 required:
-- event
+- method
+- path
+- auth
+- parameters
 - permissions
 - layers
 - size
