added queue worker demo

--- a/pareto2/api/schemas/worker.yaml
+++ b/pareto2/api/schemas/worker.yaml
@@ -10,6 +10,7 @@ properties:
         enum:
         - bucket
         - builder
+        - queue
         - table
         - unbound
       pattern:
