added timeout minimax values

--- a/pareto2/api/schemas/endpoint.yaml
+++ b/pareto2/api/schemas/endpoint.yaml
@@ -31,7 +31,8 @@ properties:
     minumum: 0
   timeout: 
     type: integer
-    minimum: 0
+    minimum: 1
+    maxumum: 900
 required:
 - method
 - path
