--- a/pareto2/api/schemas/timer.yaml
+++ b/pareto2/api/schemas/timer.yaml
@@ -23,7 +23,8 @@ properties:
     minimum: 0
   timeout: 
     type: integer
-    minimum: 0
+    minimum: 1
+    maximum: 900
 required:
 - event
 - permissions
