--- a/pareto2/api/schemas/endpoint.yaml
+++ b/pareto2/api/schemas/endpoint.yaml
@@ -28,7 +28,8 @@ properties:
       type: string
   size: 
     type: integer
-    minumum: 0
+    minumum: 128
+    maximum: 10240
   timeout: 
     type: integer
     minimum: 1
