--- a/pareto2/api/schemas/worker.yaml
+++ b/pareto2/api/schemas/worker.yaml
@@ -48,7 +48,8 @@ properties:
       type: string
   size: 
     type: integer
-    minimum: 0
+    minumum: 128
+    maximum: 10240
   timeout: 
     type: integer
     minimum: 1
