--- a/pareto2/api/schemas/endpoint.yaml
+++ b/pareto2/api/schemas/endpoint.yaml
@@ -28,12 +28,12 @@ properties:
       type: string
   size: 
     type: integer
-    minumum: 128
+    minimum: 128
     maximum: 10240
   timeout: 
     type: integer
     minimum: 1
-    maxumum: 900
+    maximum: 900
 required:
 - method
 - path
