added binary media field

--- a/pareto2/api/schemas/root.yaml
+++ b/pareto2/api/schemas/root.yaml
@@ -13,6 +13,8 @@ properties:
     properties:
       public:
         type: boolean
+      binary-media:
+        type: boolean
     required:
     - public
     additionalProperties: false
