added index type enum

--- a/pareto2/api/schemas/root.yaml
+++ b/pareto2/api/schemas/root.yaml
@@ -45,6 +45,9 @@ properties:
               type: string
             type:
               type: string
+              enum:
+              - S
+              # - N
           required:
           - name
           - type
