--- a/pareto2/api/schemas/events/table.yaml
+++ b/pareto2/api/schemas/events/table.yaml
@@ -1,6 +1,32 @@
 ---
 "$schema": "http://json-schema.org/draft-07/schema#"
 type: object
-properties: {}
-required: []
-additionalProperties: true
+properties:
+  detail:
+    type: object
+    properties: {}
+    required: []
+    additionalProperties: true
+  detail-type:
+    type: array
+    items:
+      type: string
+    minItems: 1
+    maxItems: 1
+  source: 
+    type: array
+    items:
+      type: object
+      properties:
+        Ref:
+          type: string
+      required:
+      - Ref
+      additionalProperties: false
+    minItems: 1
+    maxItems: 1
+required:
+- detail
+# - detail-type
+- source
+additionalProperties: false
