--- a/pareto2/api/schemas/events/unbound.yaml
+++ b/pareto2/api/schemas/events/unbound.yaml
@@ -9,8 +9,22 @@ properties:
     additionalProperties: true
   detail-type:
     type: array
+    items:
+      type: string
+    minItems: 1
+    maxItems: 1
   source: 
     type: array
+    items:
+      type: object
+      properties:
+        Ref:
+          type: string
+      required:
+      - Ref
+      additionalProperties: false
+    minItems: 1
+    maxItems: 1
 required:
 # - detail
 - detail-type
