--- a/pareto2/api/schemas/events/queue.yaml
+++ b/pareto2/api/schemas/events/queue.yaml
@@ -9,10 +9,24 @@ properties:
     additionalProperties: true
   detail-type:
     type: array
+    items:
+      type: string
+    minItems: 1
+    maxItems: 1
   source: 
     type: array
+    items:
+      type: object
+      properties:
+        Ref:
+          type: string
+      required:
+      - Ref
+      additionalProperties: false
+    minItems: 1
+    maxItems: 1
 required:
 - detail
 # - detail-type
-# - source
+- source
 additionalProperties: false
