added bucket and object to s3 record example

--- a/pareto2/api/schemas/events/bucket.yaml
+++ b/pareto2/api/schemas/events/bucket.yaml
@@ -19,9 +19,9 @@ properties:
         required:
         - key
         additionalProperties: true
-    required: []
-    # - bucket
-    # - object
+    required:
+    - bucket
+    - object
     additionalProperties: true
   detail-type:
     type: array
