--- a/pareto2/api/schemas/events/table.yaml
+++ b/pareto2/api/schemas/events/table.yaml
@@ -11,8 +11,14 @@ properties:
           type: string
         minItems: 1
         maxItems: 1
-      pk: {}
-      sk: {}
+      pk:
+        type: array
+        minItems: 1
+        maxItems: 1
+      sk:
+        type: array
+        minItems: 1
+        maxItems: 1
       records:
         type: array
         items:
