--- a/pareto2/api/schemas/events/builder.yaml
+++ b/pareto2/api/schemas/events/builder.yaml
@@ -36,11 +36,11 @@ properties:
     type: array
     items:
       type: string
-    const: "aws.codebuild"
+    # const: "aws.codebuild"
     minItems: 1
     maxItems: 1
 required:
 - detail
 # - detail-type
-# - source
+- source
 additionalProperties: false
