fixed const validation

--- a/pareto2/api/schemas/events/builder.yaml
+++ b/pareto2/api/schemas/events/builder.yaml
@@ -34,7 +34,7 @@ properties:
     type: array
     items:
       type: string
-    # const: "aws.codebuild"
+      const: "aws.codebuild"
     minItems: 1
     maxItems: 1
 required:
