--- a/pareto2/api/schemas/events/bucket.yaml
+++ b/pareto2/api/schemas/events/bucket.yaml
@@ -33,7 +33,7 @@ properties:
     type: array
     items:
       type: string
-    # const: aws.s3
+      const: "aws.s3"
     minItems: 1
     maxItems: 1
 required:
