--- a/pareto2/api/schemas/events/queue.yaml
+++ b/pareto2/api/schemas/events/queue.yaml
@@ -4,14 +4,8 @@ type: object
 properties:
   detail:
     type: object
-    properties:
-      Records:
-        type: array
-        items:
-          type: object
-        minItems: 1
-    required:
-    - Records
+    properties: {}
+    required: []
     additionalProperties: true
   detail-type:
     type: array
