--- a/pareto2/api/schemas/events/table.yaml
+++ b/pareto2/api/schemas/events/table.yaml
@@ -21,8 +21,7 @@ properties:
         maxItems: 1
       records:
         type: object # NB not an array (rule is object; data is array)
-    required:
-    - records   
+    required: []
     additionalProperties: false
   detail-type:
     type: array
