replaced schedule with rate and included regex pattern matching

--- a/pareto2/api/schemas/timer.yaml
+++ b/pareto2/api/schemas/timer.yaml
@@ -5,10 +5,11 @@ properties:
   event:
     type: object
     properties:
-      schedule:
+      rate:
         type: string
+        pattern: "\\d+ ((minute)|(hour))s?"
     required:
-    - schedule
+    - rate
     additionalProperties: false
   permissions: 
     type: array
