--- a/pareto2/api/schemas/events/table.yaml
+++ b/pareto2/api/schemas/events/table.yaml
@@ -10,6 +10,11 @@ properties:
         items:
           type: string
         minItems: 1
+      diffKeys:
+        type: array
+        items:
+          type: string
+        minItems: 1
       pk:
         type: array
         minItems: 1
