added user-pool event and completed task queue inline code test

--- a/pareto2/api/schemas/worker.yaml
+++ b/pareto2/api/schemas/worker.yaml
@@ -13,6 +13,7 @@ properties:
         - queue
         - table
         - unbound
+        - user-pool
       pattern:
         type: object
         properties: {}
