renamed user-pool as userpoll

--- a/pareto2/api/schemas/worker.yaml
+++ b/pareto2/api/schemas/worker.yaml
@@ -13,7 +13,7 @@ properties:
         - queue
         - table
         - unbound
-        - user-pool
+        - userpool
       pattern:
         type: object
         properties: {}
