--- a/pareto2/api/schemas/root.yaml
+++ b/pareto2/api/schemas/root.yaml
@@ -17,7 +17,7 @@ properties:
                 type:
                   type: string
                   enum:
-                    - string
+                    - str
                     - int
                     - bool
                 value:
