templater now passes template variables

--- a/pareto2/api/schemas/root.yaml
+++ b/pareto2/api/schemas/root.yaml
@@ -20,8 +20,13 @@ properties:
                 - name
                 - value
             additionalProperties: false
+          templates:
+            type: object
+            properties: {}
+            required: []
         required:
           - attributes
+          - templates
     required:
       - userpool
     additionalProperties: false
