completed spec of identity providers at userpool level

--- a/pareto2/api/schemas/root.yaml
+++ b/pareto2/api/schemas/root.yaml
@@ -7,6 +7,12 @@ properties:
       userpool:
         type: object
         properties:
+          identity_providers:
+            type: array
+            items:
+              type: string
+              enum:
+                - google
           attributes:
             type: array
             items:
@@ -45,6 +51,7 @@ properties:
                   - message
             required: []
         required:
+          - identity_providers
           - attributes
           - templates
     required:
